create seperate css stylesheet things are now almost aligned as desired

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   
   <title>Frontend Mentor | QR code component</title>
 
+  <link rel="stylesheet" href="mystyle.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="message">
+    <img src="./images/image-qr-code.png" alt="qr code">
+  <div class="first-line">Improve your front-end skills by building projects </div>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <div class="second-line">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Avery Sykes</a>.
+  </div>
   </div>
 </body>
 </html>
